--- a/styles/partials/bio.css
+++ b/styles/partials/bio.css
@@ -1,8 +1,13 @@
 .navbar {
   background-color: #323232;
-  width: 320px;
+  color: #FFFFFF;
 }
 
-.navbar-hero {
-  width: 320px;
+.navbar-logo__container {
+  display: flex;
+  justify-content: center;
+}
+
+li {
+  list-style-type: none;
 }/*# sourceMappingURL=bio.css.map */
