--- a/styles/partials/bio.scss
+++ b/styles/partials/bio.scss
@@ -6,6 +6,39 @@
     display: flex;
     justify-content: center;
 }
+.navbar-pages {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
 li {
     list-style-type: none;
+}
+.contact-info {
+    background-color: #323232;
+    color: #FFFFFF;
+    display: flex;
+    flex-wrap: wrap;
+}
+.hero-image {
+    background: url(/assets/images/hero-bio.jpg);
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-bottom: 0px;
+    min-width: 100vw;
+    min-height: 328px;
+}
+.hero-image-text {
+    padding-top: 148px;
+    padding-left: 16px;
+    position: relative;
+    font-size: $mobile-page-section-header-ts ;
+    line-height: $mobile-page-section-header-lh ;
+    font-weight: 600;
+    color: $primary-color-white;
+    margin-top: 0px;
 }
