--- a/styles/partials/bio.css
+++ b/styles/partials/bio.css
@@ -35,7 +35,7 @@ li {
   background-position: center;
   margin-bottom: 0px;
   min-width: 100vw;
-  min-height: 328px;
+  min-height: auto;
 }
 
 .hero-image-text {
@@ -43,4 +43,20 @@ li {
   padding-left: 16px;
   position: relative;
   color: #FFFFFF;
+}
+
+.main-image-gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.main-image-a {
+  width: 100%;
+  height: auto;
+}
+
+.main-image__gallery--item {
+  width: 100%;
+  height: auto;
 }/*# sourceMappingURL=bio.css.map */
