--- a/styles/partials/bio.scss
+++ b/styles/partials/bio.scss
@@ -31,11 +31,24 @@ li {
     background-position: center;
     margin-bottom: 0px;
     min-width: 100vw;
-    min-height: 328px;
+    min-height: auto;
 }
 .hero-image-text {
     padding-top: 148px;
     padding-left: 16px;
     position: relative;
     color:#FFFFFF
+}
+.main-image-gallery {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.main-image-a {
+    width: 100%;
+    height: auto;
+}
+.main-image__gallery--item {
+    width: 100%;
+    height: auto;
 }
