--- a/styles/partials/bio.scss
+++ b/styles/partials/bio.scss
@@ -1,18 +1,17 @@
 .navbar {
     background-color: #323232;
     color: #FFFFFF;
+    &-logo__container {
+        display: flex;
+        justify-content: center;
+    }
+    &-pages {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 100px;
+        padding-right: 100px;
+    }
 }
-.navbar-logo__container {
-    display: flex;
-    justify-content: center;
-}
-.navbar-pages {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 100px;
-    padding-right: 100px;
-}
-
 li {
     list-style-type: none;
 }
@@ -36,6 +35,7 @@ li {
 .hero-image-text {
     padding-top: 148px;
     padding-left: 16px;
+    padding-bottom: 148px;
     position: relative;
     color:#FFFFFF
 }
@@ -51,4 +51,9 @@ li {
 .main-image__gallery--item {
     width: 100%;
     height: auto;
+}
+.main-text-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
