--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,5 +1,20 @@
+@font-face {
+  font-family: "Avenir";
+  src: url(/assets/fonts/AvenirNextLTPro-Regular.otf);
+}
+@font-face {
+  font-family: "Avenir";
+  src: url(/assets/fonts/AvenirNextLTPro-Bold.otf);
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Avenir";
+  src: url(/assets/fonts/AvenirNextLTPro-Demi.otf);
+  font-weight: 600;
+}
 body {
   margin: 0%;
+  font-family: "Avenir";
 }
 
 .navbar {
