tweak font sizes throughout page

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -23,6 +23,8 @@ a {
 body {
   margin: 0%;
   font-family: "Avenir";
+  padding-right: 16px;
+  padding-left: 16px;
 }
 
 .navbar {
@@ -35,9 +37,8 @@ body {
 }
 .navbar-pages {
   display: flex;
-  justify-content: space-between;
-  padding-left: 100px;
-  padding-right: 100px;
+  justify-content: space-evenly;
+  padding-left: 0%;
 }
 
 li {
@@ -69,6 +70,8 @@ li {
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
+  font-weight: 600;
+  font-size: 20px;
 }
 .contact-info__title-a {
   padding-right: 20px;
@@ -145,9 +148,27 @@ li {
 }
 .main__title {
   padding: 1px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+.main-text-container__info {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 1.5;
+  font-weight: 600;
 }
 .main-text-container__info--a {
-  padding-top: 16px;
+  padding-bottom: 20px;
+  font-weight: 600;
+}
+.main-text-container__info--b {
+  line-height: 1.5;
+  font-size: 13px;
+  padding-bottom: 15px;
+}
+.main-text-container__info--bb {
+  font-weight: 600;
+  padding-bottom: 15px;
 }
 .main-container {
   display: flex;
@@ -184,4 +205,9 @@ li {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+.gallery-images {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 0%;
 }/*# sourceMappingURL=bio.css.map */
