--- a/styles/bio.css
+++ b/styles/bio.css
@@ -45,6 +45,114 @@ li {
   list-style-type: none;
 }
 
+.main {
+  min-width: 320px;
+}
+.main-hero__image {
+  background: url(/assets/images/hero-bio.jpg);
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 0px;
+  min-width: 100vw;
+  min-height: auto;
+}
+.main-hero__image--text {
+  padding-top: 148px;
+  padding-left: 16px;
+  padding-bottom: 148px;
+  position: relative;
+  color: #FFFFFF;
+  font-weight: 700;
+}
+.main-image__gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.main-images__container {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.main-bio__image {
+  width: 100%;
+  height: auto;
+}
+.main-image__gallery--item {
+  width: 100%;
+  height: auto;
+  padding-bottom: 30px;
+  justify-content: space-evenly;
+}
+@media (min-width: 768px) {
+  .main-image__gallery--item {
+    width: 215px;
+    height: 125px;
+  }
+}
+.main-bio__container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.main__title {
+  padding: 1px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+.main__title--mod {
+  font-weight: 600;
+  font-size: 23px;
+}
+.main-text-container__info {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 1.5;
+  font-weight: 600;
+}
+.main-text-container__info--a {
+  padding-bottom: 20px;
+  font-weight: 600;
+}
+.main-text-container__info--b {
+  line-height: 1.5;
+  font-size: 13px;
+  padding-bottom: 15px;
+}
+.main-text-container__info--bb {
+  font-weight: 600;
+  padding-bottom: 15px;
+}
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.main-text-container__b {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.gallery {
+  background-color: #FAFAFA;
+}
+.gallery-images {
+  padding-left: 12px;
+}
+.gallery__container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.gallery-images {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 0%;
+  font-weight: 600;
+  font-size: 25px;
+}
+
 .contact-info {
   background-color: #323232;
   color: #FFFFFF;
@@ -95,89 +203,8 @@ li {
 .contact-info__contact--mod3 {
   padding-bottom: 60px;
 }
-
-.main {
-  min-width: 320px;
-}
-.main-hero__image {
-  background: url(/assets/images/hero-bio.jpg);
-  position: relative;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin-bottom: 0px;
-  min-width: 100vw;
-  min-height: auto;
-}
-.main-hero__image--text {
-  padding-top: 148px;
-  padding-left: 16px;
-  padding-bottom: 148px;
-  position: relative;
-  color: #FFFFFF;
-}
-.main-image__gallery {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.main-images__container {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.main-bio__image {
-  width: 100%;
-  height: auto;
-}
-.main-image__gallery--item {
-  width: 100%;
-  height: auto;
-  padding-bottom: 30px;
-  justify-content: space-evenly;
-}
-@media (min-width: 768px) {
-  .main-image__gallery--item {
-    width: 215px;
-    height: 125px;
-  }
-}
-.main-bio__container {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-.main__title {
-  padding: 1px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-}
-.main-text-container__info {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  line-height: 1.5;
+.contact-info__contact--mod4 {
   font-weight: 600;
-}
-.main-text-container__info--a {
-  padding-bottom: 20px;
-  font-weight: 600;
-}
-.main-text-container__info--b {
-  line-height: 1.5;
-  font-size: 13px;
-  padding-bottom: 15px;
-}
-.main-text-container__info--bb {
-  font-weight: 600;
-  padding-bottom: 15px;
-}
-.main-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-.main-text-container__b {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
 }
 
 .additional-info {
@@ -193,21 +220,4 @@ li {
 .additional-info--mod {
   font-size: 12px;
   padding-bottom: 15px;
-}
-
-.gallery {
-  background-color: #FAFAFA;
-}
-.gallery-images {
-  padding-left: 12px;
-}
-.gallery__container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.gallery-images {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 0%;
 }/*# sourceMappingURL=bio.css.map */
