--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -67,6 +67,10 @@ padding-right: 20px;
 &-bio__image {
     width: 100%;
     height: auto;
+    @include tablet {
+      width: 90%;
+      margin-left: 35px;;
+    }
 }
 &-image__gallery--item {
     width: 100%;
@@ -119,8 +123,12 @@ font-weight: 600;
     display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  } 
+}
+&-text-container-b {
+  @include tablet {
+    display: flex;
   }
-  
 }
 &-text-container__info--b {
 line-height: 1.5;
@@ -133,6 +141,11 @@ padding-bottom: 15px;
 &-text-container__info--bb {
 font-weight: 600;
 padding-bottom: 15px;
+}
+&-text-container__info--bbb {
+  @include tablet {
+    line-height: 2;
+  }
 }
   &-container {
 display: flex;
